--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="shortcut icon"
+      href="./assets/chevron-forward-outline.svg"
+      type="image/x-icon"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
       rel="stylesheet"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DevLinks</title>
+    <title>devlinks</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -26,10 +31,31 @@
         <span></span>
       </div>
       <ul>
-        <li><a href="#">Inscreva-se no NLW</a></li>
-        <li><a href="#">Baixe meu e-book</a></li>
-        <li><a href="#">Veja meu portfólio</a></li>
-        <li><a href="#">Conheça o Explorer</a></li>
+        <li>
+          <a
+            href="https://www.youtube.com/channel/UCC4AF8lh5y5YQKjt8Rhz71Q"
+            target="_blank"
+            >Inscreva-se
+            <ion-icon
+              name="logo-youtube"
+              class="youtube"
+              size="large"
+            ></ion-icon
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://github.com/MatheusWesley?tab=repositories"
+            target="_blank"
+            >Veja meu portfólio
+            <ion-icon name="logo-github" size="large"></ion-icon
+          ></a>
+        </li>
+        <li>
+          <a href="mailto:matheus.tarra@gmail.com"
+            >Entre em contato<ion-icon name="mail" size="large"></ion-icon
+          ></a>
+        </li>
       </ul>
       <div id="social-links">
         <a href="https://github.com/matheuswesley" target="_blank">
@@ -38,16 +64,15 @@
         <a href="https://instagram.com/math.w" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
-        <a href="#">
-          <ion-icon name="logo-youtube"></ion-icon>
-        </a>
-        <a href="#">
+        <a href="https://www.linkedin.com/in/mathwesley/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
       <footer>
-        Feito com ♥ pela
-        <a href="https://www.rocketseat.com.br/" target="_blank">Rocketseat</a>
+        Design by
+        <a href="https://www.rocketseat.com.br/" target="_blank"
+          >Rocketseat ❤️</a
+        >
       </footer>
     </div>
     <script
