Colocando a imagem do meu github

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="container">
       <div id="profile">
         <img
-          src="./assets/avatar.png"
+          src="https://avatars.githubusercontent.com/u/4247225?v=4"
           alt="imagem do rosto de uma pessoa sorrindo."
         />
         <p>@math.w</p>
